# triton-python-backend-nugraph3

./: .gitignore  README.md  ascii_convert.py  data.txt
gnn_models/nugraph3/: config.pbtxt  triton_python_backend_stub
gnn_models/nugraph3/1/: model.py
gnn_models/nugraph3_new/: config.pbtxt
gnn_models/nugraph3_new/1/: hierarchical.ckpt  model.py
gnn_models_check/nugraph3/: config.pbtxt
gnn_models_check/nugraph3/1/: model.py
gnn_models_check/nugraph3_new/: config.pbtxt
gnn_models_check/nugraph3_new/1/: model.py
gnn_models_conda/nugraph2/: config.pbtxt
gnn_models_conda/nugraph2/1/: model.py
gnn_models_conda/nugraph3/: config.pbtxt
gnn_models_conda/nugraph3/1/: model.py
gnn_models_pip/nugraph2/: config.pbtxt
gnn_models_pip/nugraph2/1/: model.py
gnn_models_pip/nugraph2_cpu/: config.pbtxt
gnn_models_pip/nugraph2_cpu/1/: model.py
gnn_models_pip/nugraph3/: config.pbtxt
models/add_sub/: config.pbtxt
models/add_sub/1/: model.py
models_new/particlenet/: config.pbtxt
python_backend/: client.py  client_add_sub.py  client_gnn_nugraph3.py  client_gnn_nugraph3_raw_data.py
python_backend_scripts/: NeutrinoML_rishi.h5  client_add_sub_grpc.py  client_gnn_nugraph2_grpc.py  client_gnn_nugraph2_http.py  client_gnn_nugraph3_grpc.py  client_gnn_nugraph3_http.py  client_gnn_nugraph3_raw_data.py  client_particlenet.py  nugraph3_raw_event.h5  reah_h5.py
testclient/: readme.txt
testclient/src/: CMakeLists.txt  CMakePresets.json  data.txt  simple_grpc_infer_client_nugraph2.cc  simple_grpc_infer_client_nugraph3.cc
testclient/src/ups/: product_deps
(+3 files in other folders)
